{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 20,
  "lineage": "c27e6c1c-559c-4028-61bf-f158a31c4ccb",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "tauos_email_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-027e6c7f0e13bf5bd",
            "arn": "arn:aws:ec2:us-east-1:407294409495:elastic-ip/eipalloc-027e6c7f0e13bf5bd",
            "association_id": "eipassoc-070fb41682ffc075a",
            "domain": "vpc",
            "id": "eipalloc-027e6c7f0e13bf5bd",
            "instance": "i-07e7a1fff31e64f2e",
            "network_border_group": "us-east-1",
            "network_interface": "eni-09ddca56ecfd6e106",
            "private_dns": "ip-10-0-1-108.ec2.internal",
            "private_ip": "10.0.1.108",
            "public_dns": "ec2-44-221-133-77.compute-1.amazonaws.com",
            "public_ip": "44.221.133.77",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "tauos-email-eip",
              "Project": "TauOS"
            },
            "tags_all": {
              "Name": "tauos-email-eip",
              "Project": "TauOS"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_instance.tauos_email_server",
            "aws_key_pair.tauos_email_key",
            "aws_security_group.tauos_email_sg",
            "aws_subnet.tauos_public_subnet",
            "aws_vpc.tauos_email_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "tauos_email_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c02fb55956c7d316",
            "arn": "arn:aws:ec2:us-east-1:407294409495:instance/i-07e7a1fff31e64f2e",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-07e7a1fff31e64f2e",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "tauos-email-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-09ddca56ecfd6e106",
            "private_dns": "ip-10-0-1-108.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.108",
            "public_dns": "ec2-44-221-133-77.compute-1.amazonaws.com",
            "public_ip": "44.221.133.77",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0c33facc6760bfc2e",
                "volume_size": 50,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-071b970fc54d7191b",
            "tags": {
              "Name": "tauos-email-server",
              "Project": "TauOS"
            },
            "tags_all": {
              "Name": "tauos-email-server",
              "Project": "TauOS"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0eb8ecb65939d59d2"
            ]
          },
          "dependencies": [
            "aws_key_pair.tauos_email_key",
            "aws_security_group.tauos_email_sg",
            "aws_subnet.tauos_public_subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "tauos_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:407294409495:internet-gateway/igw-0abc371e87039449b",
            "id": "igw-0abc371e87039449b",
            "owner_id": "407294409495",
            "tags": {
              "Name": "tauos-email-igw",
              "Project": "TauOS"
            },
            "tags_all": {
              "Name": "tauos-email-igw",
              "Project": "TauOS"
            },
            "vpc_id": "vpc-0fc7e58826df61fe2"
          },
          "dependencies": [
            "aws_vpc.tauos_email_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "tauos_public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:407294409495:route-table/rtb-0f874a02be8b997fd",
            "id": "rtb-0f874a02be8b997fd",
            "owner_id": "407294409495",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0abc371e87039449b",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "tauos-email-public-rt",
              "Project": "TauOS"
            },
            "tags_all": {
              "Name": "tauos-email-public-rt",
              "Project": "TauOS"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fc7e58826df61fe2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.tauos_igw",
            "aws_vpc.tauos_email_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "tauos_public_rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0dea2362245bdf8c3",
            "route_table_id": "rtb-0f874a02be8b997fd",
            "subnet_id": "subnet-071b970fc54d7191b"
          },
          "dependencies": [
            "aws_internet_gateway.tauos_igw",
            "aws_route_table.tauos_public_rt",
            "aws_subnet.tauos_public_subnet",
            "aws_vpc.tauos_email_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "tauos_email_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:407294409495:security-group/sg-0eb8ecb65939d59d2",
            "description": "Security group for TauOS email server",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0eb8ecb65939d59d2",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "IMAP with TLS",
                "from_port": 993,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 993
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "IMAP",
                "from_port": 143,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 143
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "POP3 with TLS",
                "from_port": 995,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 995
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "POP3",
                "from_port": 110,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 110
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SMTP with TLS",
                "from_port": 587,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 587
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SMTP",
                "from_port": 25,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 25
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "tauos-email-security-group",
            "name_prefix": "",
            "owner_id": "407294409495",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "tauos-email-sg",
              "Project": "TauOS"
            },
            "tags_all": {
              "Name": "tauos-email-sg",
              "Project": "TauOS"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fc7e58826df61fe2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.tauos_email_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "tauos_public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:407294409495:subnet/subnet-071b970fc54d7191b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-071b970fc54d7191b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "407294409495",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "tauos-email-public-subnet",
              "Project": "TauOS"
            },
            "tags_all": {
              "Name": "tauos-email-public-subnet",
              "Project": "TauOS"
            },
            "vpc_id": "vpc-0fc7e58826df61fe2"
          },
          "dependencies": [
            "aws_vpc.tauos_email_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "tauos_email_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:407294409495:vpc/vpc-0fc7e58826df61fe2",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-03f9ebb9cd53b95bc",
            "default_route_table_id": "rtb-0b20e529628cc1d3e",
            "default_security_group_id": "sg-07d1061880092b777",
            "dhcp_options_id": "dopt-05a6e0873409765dc",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0fc7e58826df61fe2",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0b20e529628cc1d3e",
            "owner_id": "407294409495",
            "tags": {
              "Name": "tauos-email-vpc",
              "Project": "TauOS"
            },
            "tags_all": {
              "Name": "tauos-email-vpc",
              "Project": "TauOS"
            }
          }
        }
      ]
    }
  ]
}